--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,19 +51,22 @@
         <provider
             android:name=".data.database.RecipeContentProvider"
             android:authorities="com.udacity.baking"
-            android:exported="false"/>
+            android:exported="true"/>
 
-        <receiver android:name=".widget.WidgetProvider">
+        <receiver
+            android:name=".widget.CollectionAppWidgetProvider" >
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="me.indiandollar.apps.todoappcollectionwidget.app.ACTION_DATA_UPDATED" />
             </intent-filter>
-
-            <meta-data
-                android:name="android.appwidget.provider"
+            <meta-data android:name="android.appwidget.provider"
                 android:resource="@xml/widget_provider_info" />
         </receiver>
 
-        <service android:name=".widget.WidgetService" />
+        <service
+            android:name=".widget.IngridientWidgetRemoteViewService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+
     </application>
 
 </manifest>
