--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,9 @@
         <service
             android:name=".widget.IngridientWidgetRemoteViewService"
             android:permission="android.permission.BIND_REMOTEVIEWS" />
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
     </application>
 
