--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.android.support.test.espresso:espresso-idling-resource:3.0.1'
+    compile "com.firebase:firebase-jobdispatcher:0.7.0"
 
     // Test
     testImplementation 'junit:junit:4.12'
