Added Fastlane to the .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,10 @@ obj/
 ehthumbs.db
 Thumbs.db
 
+# Fastlane
+fastlane
+Gemfile*
+
 ### AndroidStudio Patch ###
 
 !/gradle/wrapper/gradle-wrapper.jar
